--- a/app/src/sass/utils/_responsive.scss
+++ b/app/src/sass/utils/_responsive.scss
@@ -82,7 +82,24 @@
 }
 
 // Medium devices (tablets, 768px and up)
-// @media (min-width: 550px) and (max-width: 768px) { 
+@media (max-width: 768px) { 
+
+    #container-meetme {
+        // background: linear-gradient(to right, $meetme-linear-start, $highlight-colour);
+        background: linear-gradient(to right, $meetme-linear-start 30%, $highlight-colour);
+
+        #meetme {
+
+            .row {
+                #wrapper-rimpey-banner {
+                    background-position-x: 80%;
+                }
+            }
+        }
+    }
+
+    
+}
 
     // push text down for iPhone image to overlap background colour
     // between two sections MY SKILLS and MEET ME
@@ -104,6 +121,18 @@
 // }
 
 @media (max-width: 992px){
+
+    #container-meetme {
+        
+        #meetme {
+
+            .row {
+                #wrapper-rimpey-banner {
+                    background-position-x: 82%;
+                }
+            }
+        }
+    }
 
     //move social media bubbles to right once social icons switch to bottom: 
     footer {
